fix navbar not aligning center in the sign up page

--- a/app/assets/stylesheets/layouts/navbar.scss
+++ b/app/assets/stylesheets/layouts/navbar.scss
@@ -10,6 +10,7 @@ header {
   > nav.three-columns {
     display: grid;
     align-items: center;
+    height: 100%;
 
     .start {
       .button,
